force-app/main/default/objects/Sponsor__c/fields/Company_HQ__c.field-meta.xml
<CustomField>
    <fullName>Company_HQ__c</fullName>
    <label>Company HQ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>