force-app/main/default/objects/Sponsor__c/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ISV</fullName>
                <default>true</default>
                <label>ISV</label>
            </value>
            <value>
                <fullName>Salesforce Partner</fullName>
            </value>
            <value>
                <fullName>Recruitment Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>