force-app/main/default/objects/Sponsor__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Information &amp; Technology</fullName>
                <default>true</default>
                <label>Information &amp; Technology</label>
            </value>
            <value>
                <fullName>Data Sciences</fullName>
            </value>
            <value>
                <fullName>Statistical Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>