force-app/main/default/objects/Sponsor__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sponsors</relationshipLabel>
    <relationshipName>Sponsors</relationshipName>
    <type>Lookup</type>
</CustomField>