force-app/main/default/objects/Sponsor__c/fields/Sponsor_Image__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Image__c</fullName>
    <label>Sponsor  Image</label>
    <type>Url</type>
</CustomField>