force-app/main/default/objects/Sponsor__c/fields/Sponsor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Phone__c</fullName>
    <label>Sponsor Phone</label>
    <type>Phone</type>
</CustomField>