force-app/main/default/objects/Sponsor__c/fields/Sponsor_Picture__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Picture__c</fullName>
    <label>Sponsor Picture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>