force-app/main/default/objects/Sponsor__c/fields/Sponsor_Title__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Title__c</fullName>
    <label>Sponsor Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>