force-app/main/default/objects/Sponsor__c/fields/Sponsorship_Level__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Level__c</fullName>
    <label>Sponsorship Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
                <isActive>false</isActive>
                <label>Bronze</label>
            </value>
            <value>
                <fullName>Silver</fullName>
                <isActive>false</isActive>
                <label>Silver</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>